...
    <string name="am_credentials_saved">Account credentials saved!</string>
    <string name="am_error_save">Unable to save credentials in AccountManager!</string>
    <string name="am_register_succ">Account registered!</string>

    <!-- MovementController's Toast's strings-->
    <string name="mc_win">YOU WIN!</string>
    <string name="mc_invalid_tap">Invalid Tap</string>

    <!-- GameActivity's Strings -->
    <string name="ga_undo">Undo:%1$d</string>
    <string name="ga_save">Save</string>
    <string name="ga_logged_as">Logged in:</string>
    <string name="ga_current_user">%1$s</string>
    <string name="ga_guest_user">Guest</string>
    <string name="ga_cannot_undo">Not Able To Undo!</string>
    <string name="ga_auto_saved">Auto-saved!</string>\
    <string name="ga_manual_save">Saved!</string>
    <string name="ga_guest_save">Cannot save as guest!</string>

    <!-- GameActivity's Strings -->
    <string name="gs_confirm_deletion">Delete all games?</string>

    <!-- Scoreboard's Strings -->
    <string name="sb_game">%1$s</string>
    <string name="gsb_logged_as">Logged as: %1$s</string>
    <string name="gsb_no_score">Guest has no saved scores!</string>

    <!-- Dialog's Strings -->
    <string name="d_url_field">Custom URL Image</string>
    <string name="d_cb_use_image">Use this image as puzzle</string>
    <string name="d_load_image">Load Image</string>
    <string name="d_image_once">Image will NOT be saved nor loadable after exiting, but puzzle will remain loadable.</string>
...
