<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <fall2018.csc2017.slidingtiles.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        tools:context=".GameActivity">

    </fall2018.csc2017.slidingtiles.GestureDetectGridView>

    <Button
        android:id="@+id/UndoButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/ga_undo" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="onClickSaveBoard"
        android:text="@string/ga_save" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_currentUserGame"
        android:layout_alignStart="@+id/text_currentUserGame"
        android:layout_alignTop="@+id/SaveButton"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:paddingEnd="0dp"
        android:text="@string/ga_logged_as" />

    <TextView
        android:id="@+id/text_currentUserGame"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:layout_toStartOf="@+id/SaveButton"
        android:paddingEnd="0dp"
        android:text="@string/player" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/textView7"
        android:textSize="20sp" />



</RelativeLayout>