<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreBoard">

    <TextView
        android:id="@+id/scoreboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/scoreboard"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/scoreboard_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scoreboard_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/bg_simplebg">
    </ListView>

    <Button
        android:id="@+id/button_game_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="20dp"
        android:onClick="gameSelectionButtonOnClick"
        android:text="@string/game_selection"/>

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scoreboard_title"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-44dp"
        android:layout_marginBottom="20dp"
        android:text="@string/try_again" />

    <TextView
        android:id="@+id/yourscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreboard_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lastscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreboard_title"
        android:layout_marginStart="11dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/switchscoreboardview"
        android:layout_toEndOf="@+id/yourscore"
        android:textSize="24sp" />

    <Button
        android:id="@+id/switchscoreboardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreboard_title"
        android:layout_alignBottom="@+id/yourscore"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-8dp"
        android:onClick="changeScoreboardViewOnClick"
        android:text="@string/change_scoreboard" />


</RelativeLayout>