...
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/ll_difficulty_text" />

    <TextView
        android:id="@+id/text_undos"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/num_undos" />

    <Button
...
